<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog_password_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_rounded_corner"
    android:elevation="8dp"
    android:minWidth="320dp"
    android:orientation="vertical"
    android:padding="13dp"
    tools:context=".presentation.listCities.AddCityDialog">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/city_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="3.5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:fontFamily="@font/open_sans_bold"
            android:singleLine="true"
            android:text="@string/add_new_city"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:contentDescription="@string/close_button"
            android:src="@drawable/ic_baseline_close_24" />
    </LinearLayout>


    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/open_sans_semibold"
        android:labelFor="@id/input_name"
        android:singleLine="true"
        android:text="@string/name"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="Enter name..."
        android:backgroundTint="@color/black"
        android:fontFamily="@font/open_sans_semibold"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/green"
        android:textCursorDrawable="@color/green"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/open_sans_semibold"
        android:labelFor="@id/input_description"
        android:singleLine="true"
        android:text="@string/description"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="Enter description..."
        android:backgroundTint="@color/black"
        android:fontFamily="@font/open_sans_semibold"
        android:inputType="text"
        android:singleLine="false"
        android:textColor="@color/green"
        android:textCursorDrawable="@color/green"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="4dp">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@drawable/cancel_button_rounded"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/red"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/create_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/create_button_rounded"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:backgroundTint="@color/green" />
    </LinearLayout>




</LinearLayout>